updated to add a pic of the sender

--- a/docbook/makefile
+++ b/docbook/makefile
@@ -1,13 +1,19 @@
+XSLTOPTS=-v
+
 all: 3w 12-30w
 3w: 3w.html 3w.pdf
 12-30w: 12-30w.html 12-30w.pdf
+demo: remoteSense.html remoteSense.xml
 
 %.html: %.xml html.xsl
-	xsltproc --xinclude  --output $@ html.xsl $<
+	xsltproc $(XSLTOPTS) --xinclude  --output $@ html.xsl $<
 
 %.fo: %.xml fo.xsl 
-	xsltproc --xinclude --output $@ fo.xsl $<
+	xsltproc $(XSLTOPTS) --xinclude --output $@ fo.xsl $<
 
+#fop can be got from: http://xmlgraphics.apache.org/fop/download.html
 %.pdf: %.fo
-	~/Downloads/fop-1.0/fop $< $@
+	../fop-1.0/fop $< $@
 
+clean:
+	rm -f *pdf *html
